--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -24,7 +24,7 @@ rounded-corners-exclude = [
   #"class_g = 'kitty'",
   "class_g = 'Alacritty'",
   "class_g = 'Polybar'",
-  "class_g = 'code-oss'",
+  "class_g = 'dmenu_run",
   #"class_g = 'TelegramDesktop'",
   #"class_g = 'firefox'",
   #"class_g = 'Thunderbird'"
